--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -1,19 +1,21 @@
 body{
   background-image: url("./StaticImages/background.jpg");
   background-size: fit;
-  background-position-y: 20%;
+  background-position-y: 30%;
   background-repeat: no-repeat;
+  font-family: 'Oxygen', sans-serif; 
+  background-color: rgb(184, 156, 45);
 }
 
 .login-form{
-  background-color: #f1f1f1;
+  background-color: rgba(241, 241, 241, 1.0);
   padding: 20px;
   border-radius: 10px;
   margin-top: 100px;
 }
 
 .register-form{
-  background-color: #f1f1f1;
+  background-color: rgba(241, 241, 241, 1.0);;
   padding: 20px;
   border-radius: 10px;
   margin-top: 100px;
@@ -31,7 +33,7 @@ body{
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: #f1f1f1;
+  background-color: rgba(241, 241, 241, 1.0);;
   padding: 20px;
   border-radius: 10px;
   margin-top: 35vh;
@@ -40,10 +42,99 @@ body{
   margin-right: auto;
 }
 
-@media screen and (max-width: 600px) {
+.fp-h1 {
+  font-family: 'Oswald', sans-serif;
+  font-weight: 700;
+  font-size: 60px;
+}
+
+.fp-p {
+  font-family: 'Oxygen', sans-serif; 
+}
+
+.welcome-page-log-button{
+  background-color: rgba(184, 156, 45, 0.6);
+  padding: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  cursor: pointer;
+  transition: all .2s ease-in-out; 
+}
+
+.welcome-page-log-button:hover{
+  background-color: rgba(184, 156, 45, 0.8);
+  transform: scale(1.1); 
+}
+
+.well-container{
+  display: flex;
+  position: relative;
+}
+
+.well-info{
+  height: 100vh;
+  width: 75vw;
+  border: 1px solid black;
+  background-color: rgba(241, 241, 241, 0.2);
+}
+
+.well info button{
+  font-family: "font-awesome";
+}
+.canvas-frame{
+  width: 25vw;
+  height: 100vh;
+  border: 3px solid purple;
+  background-color: rgba(241, 241, 241, 1.0);
+}
+
+.plat-pop-up{
+  position: absolute;
+  top: 5%;
+  left: 32.5%;
+  width: 10vw;
+  height: 15vh;
+  display: none;
+  z-index: 99;
+  border: 15px green solid;
+}
+
+
+
+
+@media screen and (max-width: 768px) {
+  
+  * {
+    background-color: rgb(184, 156, 45, 0.2);
+  }
+  body{
+    background-image: none;
+  }
+
   .welcome-container{
     width: 90vw;
     margin-top: 10vh;
   }
+
+  .well-container{
+    flex-direction: column;
+  }
+
+  .well-info{
+    width: 90vw;
+    margin-top: 2vh;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .canvas-frame{
+    width: 90vw;
+    margin-top: 2vh;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
-  
