--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -124,10 +124,16 @@ h2{
   overflow-y: scroll;
   height: 55vh;
   max-height: 55vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-
-
+#new-well{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 
 .canvas-frame{
@@ -198,10 +204,46 @@ li:nth-child(even){
   font-weight: bold;
 }
 
+.new-feature-button{
+  background-color: rgba(184, 156, 45, 0.6);
+  padding: 2px;
+  padding-left: 10px;
+  padding-right: 10px;
+  border-radius: 10px;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  cursor: pointer;
+  transition: all .2s ease-in-out; 
+}
 
+.new-feature-button:hover{
+  background-color: rgba(184, 156, 45, 0.8);
+  transform: scale(1.1); 
+}
 
+.input-hidden{
+  background-color: transparent;
+  border: none;
+}
 
+.county-state{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
+.county{
+  width: 60%;
+}
+
+.state{
+  width: 33%;
+}
+
+.input-hidden:focus{
+  background-color: white;
+}
 
 
 @media screen and (max-width: 768px) {
