--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -245,6 +245,18 @@ li:nth-child(even){
   background-color: white;
 }
 
+.highlight{
+  color: red;
+  transform: translateX(-15%);
+}
+
+.trash-icon{
+  cursor: pointer;
+  background-color: rgba(184, 156, 45, 0.4);
+  display: inline-block;
+  padding: 6px;
+  border-radius: 50%;
+}
 
 @media screen and (max-width: 768px) {
   
