--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -353,3 +353,24 @@ li:nth-child(even){
   top: 5%;
   left: 37.5%;
 }
+
+#canvas1{
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  z-index: 10;
+  height: 100vh;
+  background-image: url("./StaticImages/dirt-texture.jpeg");
+  background-size: contain;
+  background-repeat: repeat;
+
+}
+
+#canvas2{
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  height: 100vh;
+  background-color: transparent;
+  z-index: 20;
+}
