--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -354,16 +354,24 @@ li:nth-child(even){
   left: 37.5%;
 }
 
+#canvas0{
+  position: absolute;
+  top: 0%;
+  right: 0%;
+  z-index: 8;
+  height: 100vh;
+  background-image: url("./StaticImages/dirt-texture.jpeg");
+  background-size: contain;
+  background-repeat: repeat;
+
+}
+
 #canvas1{
   position: absolute;
   top: 0%;
   right: 0%;
   z-index: 10;
   height: 100vh;
-  background-image: url("./StaticImages/dirt-texture.jpeg");
-  background-size: contain;
-  background-repeat: repeat;
-
 }
 
 #canvas2{
