--- a/frontend/static/src/App.css
+++ b/frontend/static/src/App.css
@@ -1,3 +1,9 @@
+
+#float{
+  display: none;
+}
+
+
 body{
   background-image: url("./StaticImages/background.jpg");
   background-size: fit;
@@ -317,6 +323,16 @@ li:nth-child(even){
   width: 33%;
 }
 
+#back-button{
+  color: white;
+  font-weight: bold;
+  background-color:rgba(184, 156, 45, 0.6)
+}
+
+#back-button:hover{
+  transform: scale(1.2);
+}
+
 .input-hidden:focus{
   background-color: white;
 }
@@ -336,9 +352,11 @@ li:nth-child(even){
 }
 
 .highlight2{
-  color: #FFA900;
-  background-color: rgba(155, 88, 25);
-  background-color: black;
+  /* color: #FFA900;
+   */
+   color: rgba(184, 156, 45, 1.0);
+  /* background-color: rgba(155, 88, 25); */
+  background-color: rgba(241, 241, 241, 01.0);
   transform: translate(-30%, -10%);
   cursor: pointer;
 }
@@ -740,7 +758,28 @@ span{
     transform: translateY(-100%);
   }
 
- 
+  #float{
+    
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:rgba(184, 156, 45, 0.8);
+    color:white;
+    border-radius:50px;
+    text-align:center;
+    z-index: 50;
+    box-shadow: 2px 2px 3px #999;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .my-float{
+    transform: translateY(-5%);
+  }
+  
 }
 
 .trash-icon{
@@ -750,5 +789,4 @@ span{
   float: right;
   transform: translateY(-100%);
 }
-
 
